clusters/app.ci/ci-chat-bot/ci-chat-bot.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ci-chat-bot
  namespace: ci
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: ci-chat-bot
---
apiVersion: v1
kind: Service
metadata:
  namespace: ci
  name: ci-chat-bot
  labels:
    app: ci-chat-bot
spec:
  selector:
    app: ci-chat-bot
  ports:
    - name: main
      port: 8080
    - name: metrics
      port: 9090
  type: ClusterIP
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ci-chat-bot
  namespace: ci
  annotations:
    keel.sh/policy: force
    keel.sh/matchTag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 5m"
spec:
  selector:
    matchLabels:
      app: ci-chat-bot
  template:
    metadata:
      labels:
        app: ci-chat-bot
    spec:
      serviceAccountName: ci-chat-bot
      volumes:
        - configMap:
            defaultMode: 420
            name: config
          name: config
        - name: release
          emptyDir: { }
        - name: build-cluster-kubeconfigs
          projected:
            sources:
              - secret:
                  name: ci-chat-bot-kubeconfigs
              - secret:
                  name: ci-chat-bot-slack-app
                  items:
                    - key: sa.ci-chat-bot-mce.dpcr.config
                      path: sa.ci-chat-bot-mce.dpcr.config
                    - key: sa.ci-chat-bot-mce.dpcr.token.txt
                      path: sa.ci-chat-bot-mce.dpcr.token.txt
        - name: workflows-config
          configMap:
            name: ci-chat-bot-workflows-config
        - name: boskos
          secret:
            items:
              - key: credentials
                path: credentials
            secretName: boskos-credentials
        - name: jira
          secret:
            secretName: ci-chat-bot-slack-app
            items:
              - key: jira-password
                path: jira-password
              - key: jira-bot-password
                path: jira-bot-password
        - name: subnet-ids
          secret:
            secretName: ci-chat-bot-slack-app
            items:
              - key: rosa-subnet-ids
                path: rosa-subnet-ids
        - name: billing-account-id
          secret:
            secretName: ci-chat-bot-slack-app
            items:
              - key: rosa-billing-account-id
                path: rosa-billing-account-id
        - name: oidc-config-id
          secret:
            secretName: ci-chat-bot-slack-app
            items:
              - key: rosa-oidc-config-id
                path: rosa-oidc-config-id
        - name: ocmcred
          secret:
            secretName: ci-chat-bot-slack-app
            items:
              - key: rosa-admin-ocm
                path: rosa-admin-ocm
        - name: runtimedir
          emptyDir: { }
        - name: triage-config
          configMap:
            name: ci-chat-bot-triage-config
        - name: chaibot-secrets
          secret:
            secretName: cluster-secrets-chaibot-ship-help
            items:
              - key: ship-help-token
                path: ship-help-token
      containers:
        - name: git-sync
          command:
            - /git-sync
          args:
            - --repo=https://github.com/openshift/release.git
            - --ref=main
            - --period=30s
            - --root=/tmp/git-sync
            - --max-failures=3
            - --link=release
          image: quay-proxy.ci.openshift.org/openshift/ci:ci_git-sync_v4.3.0
          imagePullPolicy: Always
          volumeMounts:
            - name: release
              mountPath: /tmp/git-sync
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
        - name: bot
          image: quay-proxy.ci.openshift.org/openshift/ci:ci_ci-chat-bot_latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 8081
            initialDelaySeconds: 3
            periodSeconds: 3
          resources:
            requests:
              memory: "18Gi"
              cpu: "250m"
          volumeMounts:
            - mountPath: /etc/config
              name: config
              readOnly: true
            - name: release
              mountPath: /var/repo
            - name: build-cluster-kubeconfigs
              mountPath: /var/build-cluster-kubeconfigs
              readOnly: true
            - name: workflows-config
              mountPath: /etc/workflows-config
              readOnly: true
            - mountPath: /etc/boskos
              name: boskos
              readOnly: true
            - mountPath: /etc/jira
              name: jira
              readOnly: true
            - mountPath: /etc/ocmcred
              name: ocmcred
              readOnly: true
            - mountPath: /etc/subnet-ids
              name: subnet-ids
              readOnly: true
            - mountPath: /etc/oidc-config-id
              name: oidc-config-id
              readOnly: true
            - mountPath: /etc/billing-account-id
              name: billing-account-id
              readOnly: true
            - mountPath: /runtimedir
              name: runtimedir
            - name: triage-config
              mountPath: /etc/triage-config
              readOnly: true
            - name: chaibot-secrets
              mountPath: /etc/chaibot-secrets
              readOnly: true
          command: ["/bin/sh"]
          args:
            - -c
            - >-
              [...]
